--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
+    "@uppy/core": "^3.8.0",
+    "@uppy/drag-drop": "^3.0.3",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
