--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
     "@supabase/supabase-js": "^2.39.3",
     "@uppy/core": "^3.8.0",
     "@uppy/drag-drop": "^3.0.3",
+    "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
