--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,9 +14,9 @@
     "@uppy/core": "^3.8.0",
     "@uppy/drag-drop": "^3.0.3",
     "framer-motion": "^11.0.3",
-    "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "^14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
